--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <link rel="stylesheet" type="text/css" href="css/slider.css">
+    <link rel="stylesheet" type="text/css" href="css/component.css">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.themepunch.plugins.min.js"></script>
+    <script src="js/jquery.themepunch.revolution.min.js"></script>
+    <script src="js/modernizr.custom.26887.js"></script>
+    <script src="js/jquery.imgslider.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -56,104 +67,245 @@
     <div class="container text-center">
         <a href="#"><img src="images/logo-home.png"></a>
     </div>
-
+    <section class="color-5 text-center">
+        <nav class="cl-effect-5">
+            <a href="#"><span data-hover="مردانه">مردانه</span></a>
+            <a href="#"><span data-hover="زنانه">زنانه</span></a>
+        </nav>
+    </section>
 </div>
 <div class="header-border"></div>
 <div class="clearfix"></div>
-<div class="banner">
-    <!-- Jssor Slider Begin -->
-    <!-- You can move inline styles to css file or css block. -->
-    <div id="slider1_container" style="position: relative; margin: 0 auto;
-        top: 0; left: 0; width: 1300px; height: 500px; overflow: hidden;">
-        <!-- Loading Screen -->
-        <div u="loading" style="position: absolute; top: 0; left: 0;">
-            <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
-                top: 0; left: 0; width: 100%; height: 100%;">
-            </div>
-            <div style="position: absolute; display: block; background: url(images/loading.gif) no-repeat center center;
-                top: 0; left: 0; width: 100%; height: 100%;">
-            </div>
+<!-- slider start -->
+<div class="banner ves-slideshow">
+
+<div class="layerslider-wrapper" style="max-width:2170px;">
+
+    <div class="bannercontainer banner-boxed" style="padding: 0;margin: 0;">
+        <div id="sliderlayer1142006107" class="rev_slider boxedbanner" style="width:100%;height:515px; ">
+
+            <ul>
+
+                <li data-masterspeed="700" data-transition="random" data-slotamount="7"
+                    data-thumb="images/lingerie_slider1.jpg">
+                    <img src="images/dummy.png" data-lazyload="images/lingerie_slider1.jpg" alt="Image"
+                         data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat"/>
+
+                    <div class="caption block-green  sft stt"
+                         data-x="791.75"
+                         data-y="-0.25"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="200"
+                         data-easing="swing" data-end="28600" data-endspeed="500" data-endeasing="swing">
+                        <div style=" width:301px; height:515px; opacity:1;"></div>
+                    </div>
+                    <div class="caption   sfl stl"
+                         data-x="714.833"
+                         data-y="60.8333"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="500"
+                         data-easing="swing" data-end="28200" data-endspeed="500" data-endeasing="swing">
+                        <img src="images/7.png" style=" width:128px; height:129px;" alt="image"/>
+                    </div>
+                    <div class="caption small-blue  sfr str"
+                         data-x="812.6"
+                         data-y="182.6"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="700"
+                         data-easing="swing" data-end="27900" data-endspeed="500" data-endeasing="swing">
+                        <div style="background: none!important;">GET INTO NEW SEASON</div>
+                    </div>
+                    <div class="caption big-blue  sfb stb"
+                         data-x="812.667"
+                         data-y="198.667"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="900"
+                         data-easing="swing" data-end="27600" data-endspeed="500" data-endeasing="swing">
+                        <div style="background: none!important;">50% OFF</div>
+                    </div>
+                    <div class="caption   sfl stl"
+                         data-x="819.433"
+                         data-y="271.433"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="1100"
+                         data-easing="swing" data-end="27300" data-endspeed="500" data-endeasing="swing">
+                        <div style="color:#ffffff!important;">Wash cool save energy a revolution <br/> din washing</div>
+                    </div>
+                    <div class="caption   sft stt"
+                         data-x="820.35"
+                         data-y="335.35"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="1700"
+                         data-easing="swing" data-end="26300" data-endspeed="500" data-endeasing="swing">
+                        <div style=""><a class="shop-now" href="#">VIEW
+                            COLLECTION</a></div>
+                    </div>
+                </li>
+                <li data-masterspeed="700" data-transition="random" data-slotamount="7"
+                    data-thumb="images/ling_slider2.jpg">
+                    <img src="images/dummy.png" data-lazyload="images/ling_slider2.jpg" alt="Image" data-bgfit="cover"
+                         data-bgposition="left top" data-bgrepeat="no-repeat"/>
+
+                    <div class="caption block-green  sft stt"
+                         data-x="80.75"
+                         data-y="-0.25"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="200"
+                         data-easing="swing" data-end="28600" data-endspeed="500" data-endeasing="swing">
+                        <div style=" width:301px; height:515px; opacity:1;"></div>
+                    </div>
+                    <div class="caption   fade fadeout"
+                         data-x="317.833"
+                         data-y="58.8333"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="500"
+                         data-easing="swing" data-end="28200" data-endspeed="500" data-endeasing="swing">
+                        <img src="images/7.png" style=" width:128px; height:129px;" alt="image"/>
+                    </div>
+                    <div class="caption small-blue  sfb stb"
+                         data-x="109.6"
+                         data-y="192.6"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="700"
+                         data-easing="swing" data-end="27900" data-endspeed="500" data-endeasing="swing">
+                        <div style="background: none!important;">GET INTO NEW SEASON</div>
+                    </div>
+                    <div class="caption big-blue  sfl stl"
+                         data-x="108.667"
+                         data-y="216.667"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="900"
+                         data-easing="swing" data-end="27600" data-endspeed="500" data-endeasing="swing">
+                        <div style="background: none!important;">50% OFF</div>
+                    </div>
+                    <div class="caption   sfr str"
+                         data-x="113.433"
+                         data-y="291.433"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="1100"
+                         data-easing="swing" data-end="27300" data-endspeed="500" data-endeasing="swing">
+                        <div style="color:#ffffff!important;">Wash cool save energy a revolution <br/> din washing</div>
+                    </div>
+                    <div class="caption   sfb stb"
+                         data-x="112.35"
+                         data-y="354.35"
+                         data-splitin="none"
+                         data-splitout="none"
+                         data-elementdelay="0.1"
+                         data-endelementdelay="0.1"
+                         data-speed="500"
+                         data-start="1700"
+                         data-easing="swing" data-end="26300" data-endspeed="500" data-endeasing="swing">
+                        <div style=""><a class="shop-now" href="#">VIEW
+                            COLLECTION</a></div>
+                    </div>
+                </li>
+            </ul>
+
         </div>
-        <!-- Slides Container -->
-        <div u="slides" style="cursor: move; position: absolute; left: 0; top: 0; width: 1300px;
-            height: 500px; overflow: hidden;">
-            <div>
-                <img u="image" src="images/red.jpg"/>
-
-                <div u="caption" t="NO" t3="RTT|2" r3="137.5%" du3="3000" d3="500"
-                     style="position: absolute; width: 445px; height: 300px; top: 100px; left: 600px;">
-                    <img u="caption" t="T" du="4000" t2="NO" src="images/img-slider-pertume1.png"
-                         style="position: absolute; width: 445px; height: 300px; top: 57px; left: 121px;"/>
-
-
-                </div>
-
-                <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
-                        color: #FFFFFF;">Touch Swipe Slider
-                </div>
-                <div style="position: absolute; width: 480px; height: 120px; top: 300px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 36px; font-size: 30px;
-                        color: #FFFFFF;">
-                    Build your slider with anything, includes image, content, text, html, photo, picture
-                </div>
-            </div>
-            <div>
-                <img u="image" src="images/purple.jpg"/>
-
-                <img u="caption" t="CLIP|LR" du="4000" t2="NO" src="images/img-slider-pertume1.png"
-                     style="position: absolute; width: 445px; height: 300px; top: 70px; right: 130px;"/>
-
-                <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
-                        color: #FFFFFF;">Touch Swipe Slider
-                </div>
-                <div style="position: absolute; width: 480px; height: 120px; top: 300px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 36px; font-size: 30px;
-                        color: #FFFFFF;">
-                    Build your slider with anything, includes image, content, text, html, photo, picture
-                </div>
-            </div>
-            <div>
-                <img u="image" src="images/blue.jpg"/>
-
-                <img u="caption" t="ZMF|10" t2="NO" src="images/img-slider-pertume1.png"
-                     style="position: absolute; width: 445px; height: 300px; top: 153px; right: 163px;"/>
-
-                <div style="position: absolute; width: 480px; height: 120px; top: 30px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px;
-                        color: #FFFFFF;">Touch Swipe Slider
-                </div>
-                <div style="position: absolute; width: 480px; height: 120px; top: 300px; left: 30px; padding: 5px;
-                    text-align: left; line-height: 36px; font-size: 30px;
-                        color: #FFFFFF;">
-                    Build your slider with anything, includes image, content, text, html, photo, picture
-                </div>
-            </div>
-
-        </div>
-
-        <!-- bullet navigator container -->
-        <div u="navigator" class="jssorb21" style="position: absolute; bottom: 26px; left: 6px;">
-            <!-- bullet navigator item prototype -->
-            <div u="prototype"
-                 style="POSITION: absolute; WIDTH: 19px; HEIGHT: 19px; text-align:center; line-height:19px; color:White; font-size:12px;"></div>
-        </div>
-        <!-- Bullet Navigator Skin End -->
-
-        <!-- Arrow Navigator Skin Begin -->
-
-        <!-- Arrow Left -->
-        <span u="arrowleft" class="jssora21l" style="width: 55px; height: 55px; top: 123px; left: 8px;">
-        </span>
-        <!-- Arrow Right -->
-        <span u="arrowright" class="jssora21r" style="width: 55px; height: 55px; top: 123px; right: 8px">
-        </span>
-        <!-- Arrow Navigator Skin End -->
-        <a style="display: none" href="http://www.jssor.com">jquery photo gallery</a>
     </div>
-    <!-- Jssor Slider End -->
+
 </div>
+<!--
+##############################
+ - ACTIVATE THE BANNER HERE -
+##############################
+-->
+<script type="text/javascript">
+
+    var tpj = jQuery;
+
+
+    if (tpj.fn.cssOriginal != undefined)
+        tpj.fn.css = tpj.fn.cssOriginal;
+
+    tpj('#sliderlayer1142006107').revolution(
+            {
+                delay: 9000,
+                startheight: 515,
+                startwidth: 1170,
+
+
+                hideThumbs: 0,
+
+                thumbWidth: 100,
+                thumbHeight: 50,
+                thumbAmount: 5,
+
+                navigationType: "bullet",
+                navigationArrows: "verticalcentered",
+
+
+                navigationStyle: "round",
+
+
+                navOffsetHorizontal: 0,
+                navOffsetVertical: 0,
+
+                touchenabled: "on",
+                onHoverStop: "on",
+                shuffle: "off",
+                stopAtSlide: -1,
+                stopAfterLoops: -1,
+
+                hideCaptionAtLimit: 0,
+                hideAllCaptionAtLilmit: 0,
+                hideSliderAtLimit: 0,
+                hideTimerBar: "off",
+                fullWidth: "off",
+                forceFullWidth: "off",
+                fullScreen: "off",
+                lazyLoad: "on",
+                shadow: 0
+
+            });
+</script>
+</div>
+<!-- slider end -->
 <div class="clearfix"></div>
 <hr>
 <div class="container"><img src="images/timthumb.php.jpg" class="img-responsive"></div>
@@ -254,6 +406,53 @@
     </div>
 </section>
 <div class="clearfix"></div>
+<section class="container">
+    <div class="title"><h1 class="title-text">پرفروش ترین محصولات</h1></div>
+    <div class="fs-slider" id="fs-slider">
+
+        <figure>
+            <img src="images/1.jpg" alt="image01" />
+            <figcaption>
+                <h3>Eloquence</h3>
+                <p>American apparel flexitarian put a bird on it, mixtape typewriter irony aesthetic. </p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/2.jpg" alt="image02" />
+            <figcaption>
+                <h3>Quintessential</h3>
+                <p>Cardigan craft beer mixtape, skateboard forage fixie truffaut messenger bag. </p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/3.jpg" alt="image03" />
+            <figcaption>
+                <h3>Surreptitious</h3>
+                <p>Truffaut iphone flexitarian, banh mi thundercats cliche wolf biodiesel gastropub. </p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/4.jpg" alt="image04" />
+            <figcaption>
+                <h3>Imbroglio</h3>
+                <p>Scenester fixie pickled, shoreditch fugiat enim craft beer retro mustache.</p>
+            </figcaption>
+        </figure>
+
+        <figure>
+            <img src="images/5.jpg" alt="image05" />
+            <figcaption>
+                <h3>Lissome</h3>
+                <p>Aute sunt aliqua do sapiente. Food truck ut sustainable thundercats four loko.</p>
+            </figcaption>
+        </figure>
+
+    </div><!-- /fs-slider -->
+</section>
+<div class="clearfix"></div>
 <hr>
 <div class="footer-top">
     <div class="col-md-6">
@@ -272,10 +471,14 @@
 </footer>
 
 
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jssor.js"></script>
-<script src="js/jssor.slider.min.js"></script>
-<script src="js/slider.js"></script>
+
+<script type="text/javascript">
+    $(function() {
+
+        $( '#fs-slider' ).imgslider();
+
+    });
+</script>
+
 </body>
 </html>
