--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <ul>
 
                 <li data-masterspeed="700" data-transition="random" data-slotamount="7"
-                    data-thumb="images/lingerie_slider1.jpg">
-                    <img src="images/dummy.png" data-lazyload="images/lingerie_slider1.jpg" alt="Image"
+                    data-thumb="images/banner/brad-pitt.jpg">
+                    <img src="images/dummy.png" data-lazyload="images/banner/brad-pitt.jpg" alt="Image"
                          data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat"/>
 
                     <div class="caption block-green  sft stt"
@@ -116,7 +116,7 @@
                         <img src="images/7.png" style=" width:128px; height:129px;" alt="image"/>
                     </div>
                     <div class="caption small-blue  sfr str"
-                         data-x="812.6"
+                         data-x="962.6"
                          data-y="182.6"
                          data-splitin="none"
                          data-splitout="none"
@@ -125,10 +125,10 @@
                          data-speed="500"
                          data-start="700"
                          data-easing="swing" data-end="27900" data-endspeed="500" data-endeasing="swing">
-                        <div style="background: none!important;">GET INTO NEW SEASON</div>
+                        <div style="background: none!important; color: #ffffff; text-shadow: 0 0 5px #333"">حراج واقعی عطر</div>
                     </div>
                     <div class="caption big-blue  sfb stb"
-                         data-x="812.667"
+                         data-x="912.667"
                          data-y="198.667"
                          data-splitin="none"
                          data-splitout="none"
@@ -137,11 +137,11 @@
                          data-speed="500"
                          data-start="900"
                          data-easing="swing" data-end="27600" data-endspeed="500" data-endeasing="swing">
-                        <div style="background: none!important;">50% OFF</div>
+                        <div style="background: none!important;"></div>
                     </div>
                     <div class="caption   sfl stl"
-                         data-x="819.433"
-                         data-y="271.433"
+                         data-x="919.433"
+                         data-y="230"
                          data-splitin="none"
                          data-splitout="none"
                          data-elementdelay="0.1"
@@ -149,11 +149,11 @@
                          data-speed="500"
                          data-start="1100"
                          data-easing="swing" data-end="27300" data-endspeed="500" data-endeasing="swing">
-                        <div style="color:#ffffff!important;">Wash cool save energy a revolution <br/> din washing</div>
+                        <div style="color:#ffffff!important;">بهترین عطرهای مردانه</div>
                     </div>
                     <div class="caption   sft stt"
-                         data-x="820.35"
-                         data-y="335.35"
+                         data-x="920.35"
+                         data-y="300"
                          data-splitin="none"
                          data-splitout="none"
                          data-elementdelay="0.1"
@@ -161,13 +161,12 @@
                          data-speed="500"
                          data-start="1700"
                          data-easing="swing" data-end="26300" data-endspeed="500" data-endeasing="swing">
-                        <div style=""><a class="shop-now" href="#">VIEW
-                            COLLECTION</a></div>
+                        <div style=""><a class="shop-now" href="#">نمایش محصولات</a></div>
                     </div>
                 </li>
                 <li data-masterspeed="700" data-transition="random" data-slotamount="7"
-                    data-thumb="images/ling_slider2.jpg">
-                    <img src="images/dummy.png" data-lazyload="images/ling_slider2.jpg" alt="Image" data-bgfit="cover"
+                    data-thumb="images/banner/KEIRA-KNIGHTLEY-BANNED.jpg">
+                    <img src="images/dummy.png" data-lazyload="images/banner/KEIRA-KNIGHTLEY-BANNED.jpg" alt="Image" data-bgfit="cover"
                          data-bgposition="left top" data-bgrepeat="no-repeat"/>
 
                     <div class="caption block-green  sft stt"
@@ -204,7 +203,7 @@
                          data-speed="500"
                          data-start="700"
                          data-easing="swing" data-end="27900" data-endspeed="500" data-endeasing="swing">
-                        <div style="background: none!important;">GET INTO NEW SEASON</div>
+                        <div style="background: none!important; color: #ffffff; text-shadow: 0 0 5px #333">حراج واقعی عطر</div>
                     </div>
                     <div class="caption big-blue  sfl stl"
                          data-x="108.667"
@@ -216,11 +215,11 @@
                          data-speed="500"
                          data-start="900"
                          data-easing="swing" data-end="27600" data-endspeed="500" data-endeasing="swing">
-                        <div style="background: none!important;">50% OFF</div>
+                        <div style="background: none!important;"></div>
                     </div>
                     <div class="caption   sfr str"
                          data-x="113.433"
-                         data-y="291.433"
+                         data-y="230"
                          data-splitin="none"
                          data-splitout="none"
                          data-elementdelay="0.1"
@@ -228,11 +227,11 @@
                          data-speed="500"
                          data-start="1100"
                          data-easing="swing" data-end="27300" data-endspeed="500" data-endeasing="swing">
-                        <div style="color:#ffffff!important;">Wash cool save energy a revolution <br/> din washing</div>
+                        <div style="color:#ffffff!important;">بهترین عطر های زنانه</div>
                     </div>
                     <div class="caption   sfb stb"
                          data-x="112.35"
-                         data-y="354.35"
+                         data-y="300"
                          data-splitin="none"
                          data-splitout="none"
                          data-elementdelay="0.1"
@@ -240,8 +239,7 @@
                          data-speed="500"
                          data-start="1700"
                          data-easing="swing" data-end="26300" data-endspeed="500" data-endeasing="swing">
-                        <div style=""><a class="shop-now" href="#">VIEW
-                            COLLECTION</a></div>
+                        <div style=""><a class="shop-now" href="#">نمایش محصولات</a></div>
                     </div>
                 </li>
             </ul>
@@ -411,7 +409,7 @@
     <div class="fs-slider" id="fs-slider">
 
         <figure>
-            <img src="images/1.jpg" alt="image01" />
+            <img src="images/products/1.jpg" alt="image01" />
             <figcaption>
                 <h3>Eloquence</h3>
                 <p>American apparel flexitarian put a bird on it, mixtape typewriter irony aesthetic. </p>
@@ -419,7 +417,7 @@
         </figure>
 
         <figure>
-            <img src="images/2.jpg" alt="image02" />
+            <img src="images/products/2.jpg" alt="image02" />
             <figcaption>
                 <h3>Quintessential</h3>
                 <p>Cardigan craft beer mixtape, skateboard forage fixie truffaut messenger bag. </p>
@@ -427,7 +425,7 @@
         </figure>
 
         <figure>
-            <img src="images/3.jpg" alt="image03" />
+            <img src="images/products/3.jpg" alt="image03" />
             <figcaption>
                 <h3>Surreptitious</h3>
                 <p>Truffaut iphone flexitarian, banh mi thundercats cliche wolf biodiesel gastropub. </p>
@@ -435,7 +433,7 @@
         </figure>
 
         <figure>
-            <img src="images/4.jpg" alt="image04" />
+            <img src="images/products/4.jpg" alt="image04" />
             <figcaption>
                 <h3>Imbroglio</h3>
                 <p>Scenester fixie pickled, shoreditch fugiat enim craft beer retro mustache.</p>
@@ -443,7 +441,7 @@
         </figure>
 
         <figure>
-            <img src="images/5.jpg" alt="image05" />
+            <img src="images/products/5.jpg" alt="image05" />
             <figcaption>
                 <h3>Lissome</h3>
                 <p>Aute sunt aliqua do sapiente. Food truck ut sustainable thundercats four loko.</p>
