--- a/index.html
+++ b/index.html
@@ -411,40 +411,40 @@
         <figure>
             <img src="images/products/1.jpg" alt="image01" />
             <figcaption>
-                <h3>Eloquence</h3>
-                <p>American apparel flexitarian put a bird on it, mixtape typewriter irony aesthetic. </p>
+                <h3>chanel N5</h3>
+                
             </figcaption>
         </figure>
 
         <figure>
             <img src="images/products/2.jpg" alt="image02" />
             <figcaption>
-                <h3>Quintessential</h3>
-                <p>Cardigan craft beer mixtape, skateboard forage fixie truffaut messenger bag. </p>
+                <h3>coco chanel</h3>
+
             </figcaption>
         </figure>
 
         <figure>
             <img src="images/products/3.jpg" alt="image03" />
             <figcaption>
-                <h3>Surreptitious</h3>
-                <p>Truffaut iphone flexitarian, banh mi thundercats cliche wolf biodiesel gastropub. </p>
+                <h3>kim kardashian</h3>
+
             </figcaption>
         </figure>
 
         <figure>
             <img src="images/products/4.jpg" alt="image04" />
             <figcaption>
-                <h3>Imbroglio</h3>
-                <p>Scenester fixie pickled, shoreditch fugiat enim craft beer retro mustache.</p>
+                <h3>BLUE chanel</h3>
+
             </figcaption>
         </figure>
 
         <figure>
             <img src="images/products/5.jpg" alt="image05" />
             <figcaption>
-                <h3>Lissome</h3>
-                <p>Aute sunt aliqua do sapiente. Food truck ut sustainable thundercats four loko.</p>
+                <h3>ANGEL</h3>
+
             </figcaption>
         </figure>
 
