--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                          data-speed="500"
                          data-start="700"
                          data-easing="swing" data-end="27900" data-endspeed="500" data-endeasing="swing">
-                        <div style="background: none!important; color: #ffffff; text-shadow: 0 0 5px #333"">حراج واقعی عطر</div>
+                        <div style="background: none!important; color: #ffffff; text-shadow: 0 0 5px #333">حراج واقعی عطر</div>
                     </div>
                     <div class="caption big-blue  sfb stb"
                          data-x="912.667"
@@ -306,7 +306,10 @@
 <!-- slider end -->
 <div class="clearfix"></div>
 <hr>
-<div class="container"><img src="images/timthumb.php.jpg" class="img-responsive"></div>
+<div class="container">
+    <div class="col-md-6 effect"><a class="overlay"><img src="images/timthumb.php.jpg" class="img-responsive"></a></div>
+    <div class="col-md-6 effect"><a class="overlay"><img src="images/timthumb.php.jpg" class="img-responsive"></a></div>
+</div>
 
 <section class="container main-content">
     <div class="title"><h1 class="title-text">محصولات</h1></div>
@@ -465,7 +468,34 @@
 </div>
 <div class="clearfix"></div>
 <footer>
-
+    <div class="col-sm-9" style="border-bottom: solid 1px #bbb">
+        <div class="col-sm-4" dir="rtl">
+            <h3>تماس با ما</h3>
+            <ul class="list-unstyled">
+                <li>تهران - خیابان آزادی - خیابان نمایندگی - پلاک 1 - واحد 15</li>
+                <li>تلفن: <a href="callto:+982166576199">66576199-021</a></li>
+                <li>ایمیل: <a href="mailto:info@rayweb.ir">info@rayweb.ir</a></li>
+            </ul>
+        </div>
+        <div class="col-sm-4" dir="rtl">
+            <h3>ارتباط با ما</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1620.018638097106!2d51.3709818!3d35.7007003!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sir!4v1421244078741" width="100%" height="200" frameborder="0" style="border:0"></iframe>
+        </div>
+        <div class="col-sm-4" dir="rtl">
+            <h3>لینک های مرتبط</h3>
+            <ul class="list-unstyled text-right">
+                <li><a href="#"><i class="fa fa-chevron-circle-left"></i> صفحه اصلی</a></li>
+                <li><a href="#"><i class="fa fa-chevron-circle-left"></i> مردانه</a> </li>
+                <li><a href="#"><i class="fa fa-chevron-circle-left"></i> زنانه</a> </li>
+                <li><a href="#"><i class="fa fa-chevron-circle-left"></i> درباره ما</a> </li>
+                <li><a href="#"><i class="fa fa-chevron-circle-left"></i> تماس با ما</a> </li>
+            </ul>
+        </div>
+    </div>
+    <div class="clearfix"></div>
+    <div>
+        <h4 dir="ltr" class="text-center" style="font-family: verdana">2014 © Rayweb. All rights reserverd. </h4>
+    </div>
 </footer>
 
 
